Fix API configuration and allowed origins

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=10000
-ALLOWED_ORIGINS=http://localhost:5173,https://trustlendingfunds.com,https://www.trustlendingfunds.com
+ALLOWED_ORIGINS=http://localhost:5173,https://trustlendingfunds.com,https://www.trustlendingfunds.com,http://localhost:8080
 SMTP_HOST=server341.web-hosting.com
 SMTP_PORT=587
 SMTP_USER=lending@eagleloans.site
